docs(feedback): update swagger docs
